--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,10 @@ body::-webkit-scrollbar-thumb:hover {
   background: rgba(0, 0, 0, 0.4);
 }
 
+.noscrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
